@@ -79,8 +79,8 @@ ifastjet="@FASTJETINCPATH@"
 test -n "$ifastjet" && mycppflags="$mycppflags -I${ifastjet}"
 igsl="@GSLINCPATH@"
 test -n "$igsl" && mycppflags="$mycppflags -I${igsl}"
-iboost="@BOOST_CPPFLAGS@"
-test -n "$iboost" && mycppflags="$mycppflags ${iboost}"
+# iboost="@BOOST_CPPFLAGS@"
+# test -n "$iboost" && mycppflags="$mycppflags ${iboost}"
 
 
 ## Get Rivet system linker flags (duplicating that in rivet-config.in)
