@@ -1,5 +1,4 @@
 #include "Rivet/ParticleName.hh"
-#include "Rivet/Tools/RivetBoost.hh"
 #include "Rivet/Tools/Utils.hh"
 
 namespace Rivet {
